// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row component should render correctly with alignItems prop 1`] = `
<div
  className="sc-kEjbQP fZOoGy"
/>
`;

exports[`Row component should render correctly with margin all sides prop 1`] = `
<div
  className="sc-kEjbQP losDUZ"
/>
`;

exports[`Row component should render correctly with margin each axis prop 1`] = `
<div
  className="sc-kEjbQP bOMCCO"
/>
`;

exports[`Row component should render correctly with margin each sides props 1`] = `
<div
  className="sc-kEjbQP gukdsz"
/>
`;

exports[`Row component should render correctly without props 1`] = `
<div
  className="sc-kEjbQP gisFAV"
/>
`;
